fix: table overlaping fix

--- a/mp_global/assets/admin/mp_admin_settings.css
+++ b/mp_global/assets/admin/mp_admin_settings.css
@@ -25,8 +25,9 @@
 	#mp_meta_box_panel table tr:nth-child(even) {background-color: var(--color_light);}
 	#mp_meta_box_panel table tr:nth-child(odd) {background-color: #FFF;}
 	#mp_meta_box_panel table th,
-	#mp_meta_box_panel table td {border: 0;vertical-align: top;padding: 5px;display: table-cell;}
+	#mp_meta_box_panel table td {border: 0;vertical-align: top;padding: 5px;}
 	#mp_meta_box_panel table th {text-align:left;font-size: 12px;}
+	#mp_meta_box_panel table th.mActive,#mp_meta_box_panel table td.mActive{display: table-cell;}
 	#mp_meta_box_panel table tbody th {text-align: left;}
 	#mp_meta_box_panel table tbody thead th {text-align: center;}
 	/************************************/
